# ABA_test

./: CMakeLists.txt  README.md
Com_with_pinocchio/: com_with_pinocchio.cpp  com_with_pinocchio_6axis.cpp
include/: test_ABA_final.h  test_T_R_out.h  test_back.h  test_c.h  test_p.h  test_pass3.h  test_v_ori.h
notes/: ABA正动力学推导记录.md
test/: test_ABA.cpp  test_ABA_3_axis.cpp  test_ABA_6_axis.cpp  test_ABA_final.cpp  test_T_R_out.cpp  test_back.cpp  test_c.cpp  test_p.cpp  test_pass3.cpp  test_v_ori.cpp
